kubernetes/wise23/01-microblog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  selector:
    matchLabels:
      app: microblog
  replicas: 2
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
      - name: microblog
        image: stonie24/microblog:v14.0.7
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 250m
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
